--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,66 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.container {
+    text-align: center;
+}
+
+.post{
+    background: black;
+    width: 17px;
+    height: 100px;
+    margin-left: 640px;
+}
+
+.traffic-light {
+    display: inline-block;
+    background: black;
+    padding: 15px;
+    margin: auto;
+    border-radius: 20px;
+}
+
+.light {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+} 
+
+
+
+.red {
+    background: red;
+    margin: 10px;
+}
+
+.yellow {
+    background: rgb(255, 196, 0);
+    margin: 10px;
+}
+
+.green {
+    background: green;
+    margin: 10px;
+}
+
+.off {
+    opacity: .5;
+}
+
+.glow {
+    box-shadow: 0px 0px 30px 15px rgb(231, 222, 193);
+}
+
+.buttons {
+    margin-top: 10px;
+}
+
+.button-random, .button-purple {
+    margin: 10px;
+    width: 150px;
+    height: 50px;
+    border: none; 
+    color: white;
+    background: black;
+    font-size: larger;
+}
